--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "regex-tools",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "",
   "main": "bin/index.js",
+  "scripts": {
+    "test": "mocha"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/vilic/regex-tools"
