--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "regex-tools",
-  "version": "0.1.7",
-  "description": "",
-  "main": "bin/index.js",
+  "version": "0.1.8",
+  "description": "Tools for managing long regular expressions.",
+  "main": "bld/index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha"
   },
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/vilic/regex-tools",
   "devDependencies": {
     "chai": "^2.3.0",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "source-map-support": "^0.3.2"
   }
 }
