--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
 {
     "compilerOptions": {
-        "target": "ES5",
         "module": "commonjs",
-        "noEmitOnError": true,
+        "target": "es6",
         "noImplicitAny": true,
-        "suppressImplicitAnyIndexErrors": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "noEmitOnError": true,
+        "strictNullChecks": true,
         "sourceMap": true,
+        "stripInternal": true,
         "declaration": true,
         "rootDir": "src",
         "outDir": "bld"
     },
     "exclude": [
         "test",
-        "node_modules",
-        "bld"
+        "node_modules"
     ]
 }
